# utils_gameappshell_impl_basic

./: CMakeLists.txt  README.md
include/utils_gameappshell/apple/: platform.h
include/utils_gameappshell/windows/: platform.h
src/apple/: macapp.hpp  macapp.mm
src/windows/: windows.cpp
tests/: runner.cpp  test_guishell.cpp
